first sections view

--- a/index.html
+++ b/index.html
@@ -14,7 +14,52 @@
 	<![endif]-->
 </head>
 <body>
-    
-    <script src="script.js"></script>
+  <div class="upperBar">
+    <div class="logo"></div>
+    <nav></nav>
+  </div>
+  <header>
+    <div>
+      <h1>KRK Partnerzy</h1>
+      <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit</h3>
+    </div>
+  </header>
+  <section class="s1 about">
+    <div>SLIDER</div>
+  </section>
+  <section class="s2">
+    <div class="s2-elem s2-e1">
+      <h2>Section 1</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+    </div>
+    <div class="s2-elem s2-e2">
+      <h2>Section 2</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p></div>
+    <div class="s2-elem s2-e3">
+      <h2>Section 3</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p></div>
+    <div class="s2-elem s2-e4">
+      <h2>Section 4</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p></div>
+  </section>
+  <section class="s3 partners">
+    <div>SLIDER</div>
+  </section>
+  <section class="s4 clients">
+    <div class="s4-header">Awesome clients and brands we’ve worked with</div>
+    <div class="s4-e1">LOGO 1</div>
+    <div class="s4-e2">LOGO 2</div>
+    <div class="s4-e3">LOGO 3</div>
+    <div class="s4-e4">LOGO 4</div>
+    <div class="s4-e5">LOGO 5</div>
+    <div class="s4-e6">LOGO 6</div>
+    <div class="s4-e7">LOGO 7</div>
+    <div class="s4-e8">LOGO 8</div>
+  </section>
+  <section class="s5 contact">
+    <div>CONTACT</div>
+  </section>
+  <footer>FOOTER</footer>
+  <script src="script.js"></script>
 </body>
 </html>
