--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 </head>
 <body>
   <div class="upperBar">
-    <div class="logo"></div>
+    <div class="logo"><img src="files/KRK-DS-Logo.png" alt="Logo KRK Partnerzy"></div>
+    <div class="menuBtn"></div>
     <nav></nav>
   </div>
   <header>
@@ -46,15 +47,15 @@
     <div>SLIDER</div>
   </section>
   <section class="s4 clients">
-    <div class="s4-header">Awesome clients and brands we’ve worked with</div>
-    <div class="s4-e1">LOGO 1</div>
-    <div class="s4-e2">LOGO 2</div>
-    <div class="s4-e3">LOGO 3</div>
-    <div class="s4-e4">LOGO 4</div>
-    <div class="s4-e5">LOGO 5</div>
-    <div class="s4-e6">LOGO 6</div>
-    <div class="s4-e7">LOGO 7</div>
-    <div class="s4-e8">LOGO 8</div>
+    <div class="s4-elem s4-header">Awesome clients and brands we’ve worked with</div>
+    <div class="s4-elem s4-e1">LOGO 1</div>
+    <div class="s4-elem s4-e2">LOGO 2</div>
+    <div class="s4-elem s4-e3">LOGO 3</div>
+    <div class="s4-elem s4-e4">LOGO 4</div>
+    <div class="s4-elem s4-e5">LOGO 5</div>
+    <div class="s4-elem s4-e6">LOGO 6</div>
+    <div class="s4-elem s4-e7">LOGO 7</div>
+    <div class="s4-elem s4-e8">LOGO 8</div>
   </section>
   <section class="s5 contact">
     <div>CONTACT</div>
