form + contact stylization

--- a/index.html
+++ b/index.html
@@ -19,15 +19,18 @@
     <div class="menuBtn"></div>
     <nav></nav>
   </div>
+
   <header>
     <div>
       <h1>KRK Partnerzy</h1>
       <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit</h3>
     </div>
   </header>
+
   <section class="s1 about">
     <div>SLIDER</div>
   </section>
+
   <section class="s2">
     <div class="s2-elem s2-e1">
       <h2>Section 1</h2>
@@ -46,6 +49,7 @@
   <section class="s3 partners">
     <div>SLIDER</div>
   </section>
+
   <section class="s4 clients">
     <div class="s4-elem s4-header">Awesome clients and brands we’ve worked with</div>
     <div class="s4-elem s4-e1">LOGO 1</div>
@@ -57,9 +61,19 @@
     <div class="s4-elem s4-e7">LOGO 7</div>
     <div class="s4-elem s4-e8">LOGO 8</div>
   </section>
+
   <section class="s5 contact">
-    <div>CONTACT</div>
+    <h2>CONTACT</h2>
+    <form action="" method"post">
+      <input class="name" type="text" name="name" placeholder="podaj swoje imię">
+      <input class="email" type="text" name="email" placeholder="podaj swój email">
+      <textarea class="textarea" name="content" placeholder="wpisz wiadomość"></textarea>
+      <button class="button">Send</button>
+    </form>
+    <div class="aside">aside</div>
+    <div class="map">MAPA</div>
   </section>
+
   <footer>FOOTER</footer>
   <script src="script.js"></script>
 </body>
