social icons add

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="discription" content="opis">
     <meta name="keywords" content="słowo kluczowe 1, słowo kluczowe 2, słowo kluczowe 3">
     <link href="style.css" type="text/css" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
 
 <!--[if lt IE 9]>
 	<script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
@@ -70,7 +71,14 @@
       <textarea class="textarea" name="content" placeholder="wpisz wiadomość"></textarea>
       <button class="button">Send</button>
     </form>
-    <div class="aside">aside</div>
+    <div class="aside">aside
+      <div class="socials">
+        <a href="http://linkedin.com"><i class="fab fa-linkedin"></i></a>
+        <a href="http://facebook.com"><i class="fab fa-facebook-square"></i></a>
+        <a href="http://instagram.com"><i class="fab fa-instagram"></i></a>
+        <a href="http://twitter.com"><i class="fab fa-twitter-square"></i></a>
+      </div>
+    </div>
     <div class="map">MAPA</div>
   </section>
 
