--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p></div>
   </section>
   <section class="s3 partners">
-    <div>SLIDER</div>
+    <div>zdjęcia z opisami</div>
   </section>
 
   <section class="s4 clients">
@@ -83,6 +83,9 @@
   </section>
 
   <footer>FOOTER</footer>
+  <script src="http://maps.google.com/maps/api/js?sensor=false"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="files/jquery.gomap-1.3.2.min.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
