--- a/index.html
+++ b/index.html
@@ -15,23 +15,31 @@
 	<![endif]-->
 </head>
 <body>
+  <!-- / ------------ bar & menu ----------------------- / -->
   <div class="upperBar">
     <div class="logo"><img src="files/KRK-DS-Logo.png" alt="Logo KRK Partnerzy"></div>
     <div class="menuBtn"></div>
-    <nav></nav>
   </div>
-
+  <nav>
+    <ul>
+      <li>MY</li>
+      <li>OFERTA</li>
+      <li>PARTNERZY</li>
+      <li>KONTAKT</li>
+    </ul>
+  </nav>
+  <!-- / ------------ header ----------------------- / -->
   <header>
     <div>
       <h1>KRK Partnerzy</h1>
       <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit</h3>
     </div>
   </header>
-
+  <!-- / ------------ section 1 ----------------------- / -->
   <section class="s1 about">
     <div>SLIDER</div>
   </section>
-
+  <!-- / ------------ section 2 ----------------------- / -->
   <section class="s2">
     <div class="s2-elem s2-e1">
       <h2>Section 1</h2>
@@ -47,10 +55,11 @@
       <h2>Section 4</h2>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p></div>
   </section>
+  <!-- / ------------ section 3 ----------------------- / -->
   <section class="s3 partners">
     <div>zdjęcia z opisami</div>
   </section>
-
+  <!-- / ------------ section 4 ----------------------- / -->
   <section class="s4 clients">
     <div class="s4-elem s4-header">Awesome clients and brands we’ve worked with</div>
     <div class="s4-elem s4-e1">LOGO 1</div>
@@ -62,7 +71,7 @@
     <div class="s4-elem s4-e7">LOGO 7</div>
     <div class="s4-elem s4-e8">LOGO 8</div>
   </section>
-
+  <!-- / ------------ section 5 ----------------------- / -->
   <section class="s5 contact">
     <h2>CONTACT</h2>
     <form action="" method"post">
@@ -81,11 +90,11 @@
     </div>
     <div class="map">MAPA</div>
   </section>
-
+  <!-- / ------------ footer ----------------------- / -->
   <footer>FOOTER</footer>
   <script src="http://maps.google.com/maps/api/js?sensor=false"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="files/jquery.gomap-1.3.2.min.js"></script>
+  <script src="files/jquery.gomap-1.3.3.min.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
