--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
   </div>
   <nav>
     <ul>
-      <li>MY</li>
-      <li>OFERTA</li>
-      <li>PARTNERZY</li>
-      <li>KONTAKT</li>
+      <li><a href="#about" class="navi">MY</a></li>
+      <li><a href="#offer" class="navi">OFERTA</a></li>
+      <li><a href="#partners" class="navi">PARTNERZY</a></li>
+      <li><a href="#contact" class="navi">KONTAKT</a></li>
     </ul>
   </nav>
   <!-- / ------------ header ----------------------- / -->
@@ -36,7 +36,7 @@
     </div>
   </header>
   <!-- / ------------ section 1 ----------------------- / -->
-  <section class="s1 about">
+  <section class="s1 about" id="about">
     <div>SLIDER</div>
   </section>
   <!-- / ------------ section 2 ----------------------- / -->
@@ -56,11 +56,11 @@
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p></div>
   </section>
   <!-- / ------------ section 3 ----------------------- / -->
-  <section class="s3 partners">
+  <section class="s3 offer" id="offer">
     <div>zdjęcia z opisami</div>
   </section>
   <!-- / ------------ section 4 ----------------------- / -->
-  <section class="s4 clients">
+  <section class="s4 partners" id="partners">
     <div class="s4-elem s4-header">Awesome clients and brands we’ve worked with</div>
     <div class="s4-elem s4-e1">LOGO 1</div>
     <div class="s4-elem s4-e2">LOGO 2</div>
@@ -72,7 +72,7 @@
     <div class="s4-elem s4-e8">LOGO 8</div>
   </section>
   <!-- / ------------ section 5 ----------------------- / -->
-  <section class="s5 contact">
+  <section class="s5 contact" id="contact">
     <h2>CONTACT</h2>
     <form action="" method"post">
       <input class="name" type="text" name="name" placeholder="podaj swoje imię">
