--- a/index.html
+++ b/index.html
@@ -15,31 +15,35 @@
 	<![endif]-->
 </head>
 <body>
-  <!-- / ------------ bar & menu ----------------------- / -->
+  <!-- ================ bar & menu ======================== -->
   <div class="upperBar">
     <div class="logo"><img src="files/KRK-DS-Logo.png" alt="Logo KRK Partnerzy"></div>
     <div class="menuBtn"></div>
   </div>
   <nav>
     <ul>
+      <li>
+        <a class="lang" href="#">EN</a>
+        <a class="lang" href="#">PL</a>
+      </li>
       <li><a href="#about" class="navi">MY</a></li>
       <li><a href="#offer" class="navi">OFERTA</a></li>
       <li><a href="#partners" class="navi">PARTNERZY</a></li>
       <li><a href="#contact" class="navi">KONTAKT</a></li>
     </ul>
   </nav>
-  <!-- / ------------ header ----------------------- / -->
+  <!-- ================== header =========================== -->
   <header>
     <div>
       <h1>KRK Partnerzy</h1>
       <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit</h3>
     </div>
   </header>
-  <!-- / ------------ section 1 ----------------------- / -->
+  <!-- ================== section 1 =========================== -->
   <section class="s1 about" id="about">
     <div>SLIDER</div>
   </section>
-  <!-- / ------------ section 2 ----------------------- / -->
+  <!-- =================== section 2 ========================= -->
   <section class="s2">
     <div class="s2-elem s2-e1">
       <h2>Section 1</h2>
@@ -55,11 +59,11 @@
       <h2>Section 4</h2>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p></div>
   </section>
-  <!-- / ------------ section 3 ----------------------- / -->
+  <!-- =================== section 3 ========================= -->
   <section class="s3 offer" id="offer">
     <div>zdjęcia z opisami</div>
   </section>
-  <!-- / ------------ section 4 ----------------------- / -->
+  <!-- ==================== section 4 ========================== -->
   <section class="s4 partners" id="partners">
     <div class="s4-elem s4-header">Awesome clients and brands we’ve worked with</div>
     <div class="s4-elem s4-e1">LOGO 1</div>
@@ -71,7 +75,7 @@
     <div class="s4-elem s4-e7">LOGO 7</div>
     <div class="s4-elem s4-e8">LOGO 8</div>
   </section>
-  <!-- / ------------ section 5 ----------------------- / -->
+  <!-- =================== section 5 =========================== -->
   <section class="s5 contact" id="contact">
     <h2>CONTACT</h2>
     <form action="" method"post">
@@ -90,7 +94,7 @@
     </div>
     <div class="map">MAPA</div>
   </section>
-  <!-- / ------------ footer ----------------------- / -->
+  <!-- ==================== footer ============================ -->
   <footer>FOOTER</footer>
   <script src="http://maps.google.com/maps/api/js?sensor=false"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
