loop slider add

--- a/index.html
+++ b/index.html
@@ -41,7 +41,20 @@
   </header>
   <!-- ================== section 1 =========================== -->
   <section class="s1 about" id="about">
-    <div>SLIDER</div>
+    <div class="window">
+      <div class="windowL"></div>
+      <div class="windowR"></div>
+    </div>
+    <div class="slider">
+        <div class="el1 el">Slide 1</div>
+        <div class="el2 el">Slide 2</div>
+        <div class="el3 el">Slide 3</div>
+        <div class="el4 el">Slide 4</div>
+        <div class="el5 el">Slide 5</div>
+        <div class="el6 el">Slide 6</div>
+        <div class="el7 el">Slide 7</div>
+        <div class="el8 el">Slide 8</div>
+    </div>
   </section>
   <!-- =================== section 2 ========================= -->
   <section class="s2">
@@ -78,7 +91,7 @@
   <!-- =================== section 5 =========================== -->
   <section class="s5 contact" id="contact">
     <h2>CONTACT</h2>
-    <form action="" method"post">
+    <form action="contact.php" method="post">
       <input class="name" type="text" name="name" placeholder="podaj swoje imię">
       <input class="email" type="text" name="email" placeholder="podaj swój email">
       <textarea class="textarea" name="content" placeholder="wpisz wiadomość"></textarea>
