menu button animation + menu behavior

--- a/index.html
+++ b/index.html
@@ -17,8 +17,12 @@
 <body>
   <!-- ================ bar & menu ======================== -->
   <div class="upperBar">
-    <div class="logo"><img src="files/KRK-DS-Logo.png" alt="Logo KRK Partnerzy"></div>
-    <div class="menuBtn"></div>
+    <a class="logo navi" href="#header"><img src="files/KRK-DS-Logo.png" alt="Logo KRK Partnerzy"></a>
+    <div class="menuBtn">
+      <span class="menuBtnBar mbb1"></span>
+      <span class="menuBtnBar mbb2"></span>
+      <span class="menuBtnBar mbb3"></span>
+    </div>
   </div>
   <nav>
     <ul>
@@ -33,7 +37,7 @@
     </ul>
   </nav>
   <!-- ================== header =========================== -->
-  <header>
+  <header id="header">
     <div>
       <h1>KRK Partnerzy</h1>
       <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit</h3>
