footer + social hovers

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0 minimum-scale=1.0 maximum-scale=1.0">
-    <title>KRK Partnerzy</title>
+    <title>KRK Partnerzy Digital Solutions</title>
     <meta name="discription" content="opis">
     <meta name="keywords" content="słowo kluczowe 1, słowo kluczowe 2, słowo kluczowe 3">
     <link href="style.css" type="text/css" rel="stylesheet">
@@ -16,14 +16,14 @@
 </head>
 <body>
   <!-- ================ bar & menu ======================== -->
-  <div class="upperBar">
+  
     <a class="logo navi" href="#header"><img src="files/KRK-DS-Logo.png" alt="Logo KRK Partnerzy"></a>
     <div class="menuBtn">
       <span class="menuBtnBar mbb1"></span>
       <span class="menuBtnBar mbb2"></span>
       <span class="menuBtnBar mbb3"></span>
     </div>
-  </div>
+  
   <nav>
     <ul>
       <li>
@@ -40,7 +40,7 @@
   <header id="header">
     <div>
       <h1>KRK Partnerzy</h1>
-      <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit</h3>
+      <h3>Digital Solutions</h3>
     </div>
   </header>
   <!-- ================== section 1 =========================== -->
@@ -94,7 +94,7 @@
   </section>
   <!-- =================== section 5 =========================== -->
   <section class="s5 contact" id="contact">
-    <h2>CONTACT</h2>
+    <h2>KONTAKT</h2>
     <form action="contact.php" method="post">
       <input class="name" type="text" name="name" placeholder="podaj swoje imię">
       <input class="email" type="text" name="email" placeholder="podaj swój email">
@@ -112,7 +112,7 @@
     <div class="map">MAPA</div>
   </section>
   <!-- ==================== footer ============================ -->
-  <footer>FOOTER</footer>
+  <footer>KRK Partnerzy Digital Solutions 2018 &copy &#8195 Wszelkie prawa zastrzeżone.</footer>
   <script src="http://maps.google.com/maps/api/js?sensor=false"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="files/jquery.gomap-1.3.3.min.js"></script>
