animated logo cube add

--- a/index.html
+++ b/index.html
@@ -39,6 +39,14 @@
   <!-- ================== header =========================== -->
   <header id="header">
     <div>
+      <div class="cube">
+        <div class="front"></div>
+        <div class="back"></div>
+        <div class="left"></div>
+        <div class="right"></div>
+        <div class="top"></div>
+        <div class="bottom"></div>
+      </div>
       <h1>KRK Partnerzy</h1>
       <h3>Digital Solutions</h3>
     </div>
@@ -99,7 +107,7 @@
       <input class="name" type="text" name="name" placeholder="podaj swoje imię">
       <input class="email" type="text" name="email" placeholder="podaj swój email">
       <textarea class="textarea" name="content" placeholder="wpisz wiadomość"></textarea>
-      <button class="button">Send</button>
+      <button class="button">Wyślij</button>
     </form>
     <div class="aside">aside
       <div class="socials">
