js form validation + async request + message send

--- a/index.html
+++ b/index.html
@@ -103,11 +103,12 @@
   <!-- =================== section 5 =========================== -->
   <section class="s5 contact" id="contact">
     <h2>KONTAKT</h2>
-    <form action="contact.php" method="post">
+    <form action="" method="post">
       <input class="name" type="text" name="name" placeholder="podaj swoje imię">
       <input class="email" type="text" name="email" placeholder="podaj swój email">
       <textarea class="textarea" name="content" placeholder="wpisz wiadomość"></textarea>
-      <button class="button">Wyślij</button>
+      <input class="button" type="submit" value="Wyślij">
+      <span class="form-error"></span>
     </form>
     <div class="aside">aside
       <div class="socials">
