dummy content add

--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <title>KRK Partnerzy Digital Solutions</title>
     <meta name="discription" content="opis">
     <meta name="keywords" content="słowo kluczowe 1, słowo kluczowe 2, słowo kluczowe 3">
-    <link href="style.css" type="text/css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,400i,700&amp;subset=latin-ext" rel="stylesheet"> 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
+    <link href="style.css" type="text/css" rel="stylesheet">
 
 <!--[if lt IE 9]>
 	<script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
@@ -58,14 +59,30 @@
       <div class="windowR"></div>
     </div>
     <div class="slider">
-        <div class="el1 el">Slide 1</div>
-        <div class="el2 el">Slide 2</div>
-        <div class="el3 el">Slide 3</div>
-        <div class="el4 el">Slide 4</div>
-        <div class="el5 el">Slide 5</div>
-        <div class="el6 el">Slide 6</div>
-        <div class="el7 el">Slide 7</div>
-        <div class="el8 el">Slide 8</div>
+        <div class="el1 el">
+          <p>Lorem ipsum dolor sit amet consectetur, adipiscing elit facilisis.</p>
+        </div>
+        <div class="el2 el">
+          <p>Nulla cubilia urna semper et proin, phasellus vitae tempus hendrerit.</p>
+        </div>
+        <div class="el3 el">
+          <p>Vehicula magnis odio quam, sociosqu in eleifend, felis convallis.</p>
+        </div>
+        <div class="el4 el">
+          <p>Suscipit luctus quisque interdum taciti vulputate, condimentum integer sapien cras.</p>
+        </div>
+        <div class="el5 el">
+          <p>Est vehicula convallis lacinia tempor aliquam, pulvinar cum in.</p>
+        </div>
+        <div class="el6 el">
+          <p>Fringilla placerat dictumst a, vel urna semper, risus rutrum.</p>
+        </div>
+        <div class="el7 el">
+          <p>Nascetur a varius velit ut non, facilisis felis venenatis.</p>
+        </div>
+        <div class="el8 el">
+          <p>Vitae vehicula sagittis vulputate vel phasellus, mi id pellentesque.</p>
+        </div>
     </div>
   </section>
   <!-- =================== section 2 ========================= -->
@@ -86,7 +103,24 @@
   </section>
   <!-- =================== section 3 ========================= -->
   <section class="s3 offer" id="offer">
-    <div>zdjęcia z opisami</div>
+    <div>
+      <figure class="s3-image">
+        <img src="files/img/img01.jpg" alt="">
+        <figcaption>Lorem ipsum dolor sit amet.</figcaption>
+      </figure>
+      <figure class="s3-image">
+        <img src="files/img/img02.jpg" alt="">
+        <figcaption>Lorem ipsum dolor sit amet.</figcaption>
+      </figure>
+      <figure class="s3-image">
+        <img src="files/img/img03.jpg" alt="">
+        <figcaption>Lorem ipsum dolor sit amet.</figcaption>
+      </figure>
+      <figure class="s3-image">
+        <img src="files/img/img04.jpg" alt="">
+        <figcaption>Lorem ipsum dolor sit amet.</figcaption>
+      </figure>
+    </div>
   </section>
   <!-- ==================== section 4 ========================== -->
   <section class="s4 partners" id="partners">
