--- a/index.html
+++ b/index.html
@@ -144,7 +144,8 @@
       <input class="button" type="submit" value="Wyślij">
       <span class="form-error"></span>
     </form>
-    <div class="aside">aside
+    <div class="aside">
+      <span class="aside-email">adres email firmy</span>
       <div class="socials">
         <a href="http://linkedin.com"><i class="fab fa-linkedin"></i></a>
         <a href="http://facebook.com"><i class="fab fa-facebook-square"></i></a>
