--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     </div>
   </section>
   <!-- =================== section 2 ========================= -->
-  <section class="s2">
+  <section class="s2" id="section2">
     <div class="s2-elem s2-e1">
       <h2>Section 1</h2>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
