language change add

--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
   <nav>
     <ul>
       <li>
-        <a class="lang" href="#">EN</a>
-        <a class="lang" href="#">PL</a>
+        <span class="lang" id="en-switch">EN</span>
+        <span class="lang" id="pl-switch">PL</span>
       </li>
-      <li><a href="#about" class="navi">MY</a></li>
+      <li><a href="#about" class="navi">O NAS</a></li>
       <li><a href="#offer" class="navi">OFERTA</a></li>
       <li><a href="#partners" class="navi">PARTNERZY</a></li>
       <li><a href="#contact" class="navi">KONTAKT</a></li>
@@ -60,71 +60,71 @@
     </div>
     <div class="slider">
         <div class="el1 el">
-          <p>Lorem ipsum dolor sit amet consectetur, adipiscing elit facilisis.</p>
+          <p>PL - Lorem ipsum dolor sit amet consectetur, adipiscing elit facilisis.</p>
         </div>
         <div class="el2 el">
-          <p>Nulla cubilia urna semper et proin, phasellus vitae tempus hendrerit.</p>
+          <p>PL - Nulla cubilia urna semper et proin, phasellus vitae tempus hendrerit.</p>
         </div>
         <div class="el3 el">
-          <p>Vehicula magnis odio quam, sociosqu in eleifend, felis convallis.</p>
+          <p>PL - Vehicula magnis odio quam, sociosqu in eleifend, felis convallis.</p>
         </div>
         <div class="el4 el">
-          <p>Suscipit luctus quisque interdum taciti vulputate, condimentum integer sapien cras.</p>
+          <p>PL - Suscipit luctus quisque interdum taciti vulputate, condimentum integer sapien cras.</p>
         </div>
         <div class="el5 el">
-          <p>Est vehicula convallis lacinia tempor aliquam, pulvinar cum in.</p>
+          <p>PL - Est vehicula convallis lacinia tempor aliquam, pulvinar cum in.</p>
         </div>
         <div class="el6 el">
-          <p>Fringilla placerat dictumst a, vel urna semper, risus rutrum.</p>
+          <p>PL - Fringilla placerat dictumst a, vel urna semper, risus rutrum.</p>
         </div>
         <div class="el7 el">
-          <p>Nascetur a varius velit ut non, facilisis felis venenatis.</p>
+          <p>PL - Nascetur a varius velit ut non, facilisis felis venenatis.</p>
         </div>
         <div class="el8 el">
-          <p>Vitae vehicula sagittis vulputate vel phasellus, mi id pellentesque.</p>
+          <p>PL - Vitae vehicula sagittis vulputate vel phasellus, mi id pellentesque.</p>
         </div>
     </div>
   </section>
   <!-- =================== section 2 ========================= -->
   <section class="s2" id="section2">
     <div class="s2-elem s2-e1">
-      <h2>Section 1</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      <h2>Sekcja 1</h2>
+      <p>PL - Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
     </div>
     <div class="s2-elem s2-e2">
-      <h2>Section 2</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p></div>
+      <h2>Sekcja 2</h2>
+      <p>PL - Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p></div>
     <div class="s2-elem s2-e3">
-      <h2>Section 3</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p></div>
+      <h2>Sekcja 3</h2>
+      <p>PL - Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p></div>
     <div class="s2-elem s2-e4">
-      <h2>Section 4</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p></div>
+      <h2>Sekcja 4</h2>
+      <p>PL - Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p></div>
   </section>
   <!-- =================== section 3 ========================= -->
   <section class="s3 offer" id="offer">
     <div>
       <figure class="s3-image">
         <img src="files/img/img01.jpg" alt="">
-        <figcaption>Lorem ipsum dolor sit amet.</figcaption>
+        <figcaption>Obraz 1</figcaption>
       </figure>
       <figure class="s3-image">
         <img src="files/img/img02.jpg" alt="">
-        <figcaption>Lorem ipsum dolor sit amet.</figcaption>
+        <figcaption>Obraz 2</figcaption>
       </figure>
       <figure class="s3-image">
         <img src="files/img/img03.jpg" alt="">
-        <figcaption>Lorem ipsum dolor sit amet.</figcaption>
+        <figcaption>Obraz 3</figcaption>
       </figure>
       <figure class="s3-image">
         <img src="files/img/img04.jpg" alt="">
-        <figcaption>Lorem ipsum dolor sit amet.</figcaption>
+        <figcaption>Obraz 4</figcaption>
       </figure>
     </div>
   </section>
   <!-- ==================== section 4 ========================== -->
   <section class="s4 partners" id="partners">
-    <div class="s4-elem s4-header">Awesome clients and brands we’ve worked with</div>
+    <div class="s4-elem s4-header">Nasi partnerzy</div>
     <div class="s4-elem s4-e1">LOGO 1</div>
     <div class="s4-elem s4-e2">LOGO 2</div>
     <div class="s4-elem s4-e3">LOGO 3</div>
@@ -145,7 +145,7 @@
       <span class="form-error"></span>
     </form>
     <div class="aside">
-      <span class="aside-email">adres email firmy</span>
+      <span class="aside-email">Nasz adres email</span>
       <div class="socials">
         <a href="http://linkedin.com"><i class="fab fa-linkedin"></i></a>
         <a href="http://facebook.com"><i class="fab fa-facebook-square"></i></a>
